Fix: Improve layout and styling for quiz component on smaller screens

--- a/src/app/Views/quiz/quiz.component.scss
+++ b/src/app/Views/quiz/quiz.component.scss
@@ -2,6 +2,10 @@
     height: 500px;
     width: 50vw;
     z-index: 1;
+    @media (max-width: 768px) {
+        width: 90vw;
+
+    }
 
     /* Corrige a estilização de todas as divs dentro de .quiz */
     div {
